Fix vertical alignment

--- a/css/main.css
+++ b/css/main.css
@@ -163,11 +163,8 @@ a {
   .text {
     margin-left: 3rem;
     max-width: 35%;
-    margin-top: 0;
-    padding-bottom: 10em;
+    margin-top: 5em;
+    vertical-align: top;
   }
-
-
-
 
 }
